--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				 | 
 				<a href="biografia.html">BIOGRAFIA</a>
 				 | 
-				<a href="biografia.html">CAMPANHA PUBLICITÁRIA</a>
+				<a href="camp-pub.html">CAMPANHA PUBLICITÁRIA</a>
 				 | 
-				<a href="biografia.html">CONTATO</a>
+				<a href="contato.html">CONTATO</a>
 			</div>
 
 			<div id="texto">
